--- a/lesson_10/index.html
+++ b/lesson_10/index.html
@@ -107,7 +107,7 @@
 						<div class="business__block-body block-body block-body--left">
 							<div class="block-body__decor block-body__decor--left">
 								<picture class="block-body__img-box">
-									<source src="img/womans.webp" type="image/webp">
+									<source srcset="img/womans.webp" type="image/webp">
 									<img src="img/womans.jpg" alt="Women working on a laptop">
 								</picture>
 							</div>
@@ -137,7 +137,7 @@
 							</div>
 							<div class="block-body__decor block-body__decor--right">
 								<picture class="block-body__img-box block-body__img-box--right">
-									<source src="img/mans.webp" type="image/webp">
+									<source srcset="img/mans.webp" type="image/webp">
 									<img src="img/mans.jpg" alt="Team meeting with whiteboard">
 								</picture>
 							</div>
